added Rewired.one logos and adjusted layout and colors of dashboard

--- a/src/assets/scss/_themes-vars.module.scss
+++ b/src/assets/scss/_themes-vars.module.scss
@@ -9,11 +9,11 @@ $primary200: #90caf9;
 $primary800: #1565c0;
 
 // secondary
-$secondaryLight: #ede7f6;
-$secondaryMain: #673ab7;
-$secondaryDark: #5e35b1;
-$secondary200: #b39ddb;
-$secondary800: #4527a0;
+$secondaryLight: #b9f6ca;
+$secondaryMain: #69f0ae;
+$secondaryDark: #00c853;
+$secondary200: #00e676;
+$secondary800: #1ec787;
 
 // success Colors
 $successLight: #b9f6ca;
